# anoma-sdk

./: .credo.exs  CONTRIBUTING.md  Cargo.toml  README.md  mix.exs
checks/: docs.ex
examples/counter/: README.md
examples/nft/: README.md
examples/token/: README.md
github/workflows/: ci.yml
lib/: anoma.ex  json.ex  util.ex
lib/arm/: arm.ex  arm_test.ex  constants.ex  inspect.ex
lib/arm/datastructures/: action.ex  app_data.ex  cipher_text.ex  compliance_instance.ex  compliance_unit.ex  compliance_witness.ex  delta_proof.ex  delta_witness.ex  expirable_blob.ex  keypair.ex  logic_verifier.ex  logic_verifier_inputs.ex  merkle_path.ex  merkle_tree.ex  nullifier_key.ex  nullifier_key_commitment.ex  resource.ex  transaction.ex  trivial_logic_witness.ex
native/arm/: Cargo.toml
native/arm/src/: lib.rs
native/arm_test/: Cargo.toml
native/arm_test/src/: lib.rs  test.rs
test/: anoma_sdk_test.exs  anoma_test.exs  json_encoding_roundtrip_test.exs
test/native/: arm_test.exs
